--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,12 +1,7 @@
 ---
-# This workflow requires a GALAXY_API_KEY secret present in the GitHub
-# repository or organization.
-#
-# See: https://github.com/marketplace/actions/publish-ansible-role-to-galaxy
-# See: https://github.com/ansible/galaxy/issues/46
-
 name: Release
 'on':
+  pull_request:
   push:
     branches:
       - master
@@ -15,19 +10,55 @@ name: Release
 
 jobs:
 
-  release:
-    name: Release
+  # Test the image builds and works correctly.
+  test:
+    name: Test
     runs-on: ubuntu-latest
+
     steps:
       - name: Check out the codebase.
         uses: actions/checkout@v3
 
-      - name: Log in to Docker Hub
-        run: >-
-          docker login -u ${{ secrets.DOCKER_USERNAME }} -p '${{ secrets.DOCKER_PASSWORD }}'
+      - name: Set up Python 3.
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
 
-      - name: Build docker image
-        run: ./build.sh
+      - name: Install test dependencies.
+        run: pip3 install pytest-testinfra
 
-      - name: Push Docker image
-        run: docker push jingke/sonarr_sickbeard_mp4_automator:latest
+      - name: Build image.
+        run: docker build -t jingke/sonarr_sickbeard_mp4_automator .
+
+      - name: Run the built image.
+        run: docker run --name=sonarr -td jingke/sonarr_sickbeard_mp4_automator
+
+      - name: Test the built image.
+        run: py.test --hosts='docker://sonarr'
+
+  # If on master branch, build and release image.
+  release:
+    name: Release
+    runs-on: ubuntu-latest
+    needs: test
+    if: github.ref == 'refs/heads/master'
+
+    steps:
+      - uses: actions/checkout@v3
+      - uses: docker/setup-qemu-action@v2
+      - uses: docker/setup-buildx-action@v2
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push image.
+        uses: docker/build-push-action@v4
+        with:
+          context: ./
+          file: Dockerfile
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: jingke/sonarr_sickbeard_mp4_automator:latest
